# aln

./: .editorconfig  .gitignore  AAP Definitions.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Proximity Pairing Message.md  README.md  airpods_daemon.py  build-magisk-module.sh  crowdin.yml  example_deamon_send.py  log.txt  main.py  pyproject.toml  standalone.py  start-daemon.py  update.json  wak.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
aln/: __init__.py  enums.py
aln/AirPods/: Pro2.py
aln/Capabilites/: __init__.py
aln/Notifications/: ANC.py  ConversationalAwareness.py  EarDetection.py  Listener.py  __init__.py
android/: README.md  build.gradle.kts  settings.gradle.kts
android-hooking/: hook.js
android/app/: build.gradle.kts
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/btl2capfix/: customize.sh  module.prop  post-fs-data.sh
android/app/src/main/cpp/: CMakeLists.txt  l2c_fcr_hook.cpp  l2c_fcr_hook.h
android/app/src/main/res/drawable/: airpods.xml  airpods_pro_case_notification.xml  airpods_pro_left_notification.xml  airpods_pro_right_notification.xml  blur_background.xml  button_background.xml  button_shape.xml  circular_progress_bar.xml  conversational_awareness.xml  ic_bluetooth.xml  ic_layers.xml  ic_power.xml  ic_root_required.xml  island_background.xml  island_battery_background.xml  island_battery_progress.xml  popup_shape.xml  progress_bar_background.xml  ring_background.xml  shape.xml  smartphone.xml  widget_background.xml  widget_button_checked_shape_end.xml  widget_button_checked_shape_middle.xml  widget_button_checked_shape_start.xml  widget_button_shape_end.xml  widget_button_shape_middle.xml  widget_button_shape_start.xml
android/app/src/main/res/drawable-v21/: app_widget_inner_view_background.xml
android/app/src/main/res/layout/: battery_widget.xml  island_window.xml  noise_control_widget.xml  notification.xml  notification_expanded.xml  popup_window.xml
android/app/src/main/res/layout-v31/: battery_widget.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/main/res/values-night-v31/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
examples/: connect_and_listen.py  logger-and-anc.py  standalone.py
examples/daemon/: ear-detection.py  read-data.py  set-anc.py  start.py  tray.py
head-tracking/: README.md  airpods-are-in-the-case.txt  bt.py  combined.py  connection_manager.py  data  final.py  gestures.py  head_orientation.py  main.py  plot.py  requirements.txt  review.py  test-head.py  tk.py
head-tracking/Extracted Data/: 1.txt
head-tracking/no/: 2.txt  no.txt
head-tracking/yes/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  converted.txt
linux/: AirPodsTrayApp.h  BatteryIndicator.qml  BluetoothHandler.cpp  BluetoothHandler.h  BluetoothMonitor.cpp  BluetoothMonitor.h  CMakeLists.txt  Icon.qml  Main.qml  PodColumn.qml  README.md  SegmentedControl.qml  airpods_packets.h  battery.hpp  crossdevice.py  enums.h  logger.h  main.cpp  main.h  mediacontroller.cpp  mediacontroller.h  start-daemon.py  test-head.py  test_l2.py  trayiconmanager.cpp  trayiconmanager.h
linux.old/: README.md  start-daemon.py  test_l2.py
linux.old/aln/: __main__.py  listener.py
linux.old/aln/Notifications/: Battery.py  ConversationalAwareness.py  EarDetection.py  Listener.py
linux.old/examples/: standalone.py
linux.old/examples/daemon/: write-data.py
linux/aln/: __init__.py  __main__.py  enums.py  listener.py
linux/aln/AirPods/: Pro2.py  __init__.py
linux/aln/Capabilites/: __init__.py
linux/aln/Notifications/: ANC.py  Battery.py  ConversationalAwareness.py  EarDetection.py  Listener.py  __init__.py
linux/ble/: CMakeLists.txt  blemanager.cpp  blemanager.h  blescanner.cpp  blescanner.h  main.cpp  proximityparser.cpp  proximityparser.h
linux/examples/: logger-and-anc.py  standalone.py
linux/examples/daemon/: ear-detection.py  read-data.py  set-anc.py  tray.py  write-data.py
patching-server/: README.md  server.py
root-module/: customize.sh  module.prop
root-module-manual/: .gitignore  README.md  main.py  post-data-fs.sh  server.py
root-module-manual/src/: module.prop  post-data-fs.sh
root-module/busybox/: xz
(+81 files in other folders)
