[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aln"]

[project]
name = "aln"
version = "0.0.1"
authors = [
  { name="Kavish Devar", email="mail@kavishdevar.me" },
]
description = "Use your AirPods the way they were intended."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kavishdevar/aln"
Issues = "https://github.com/kavishdevar/aln/issues"